# google-reader

./: README.md  google-reader.cabal  stack.yaml
src/Web/Google/: Reader.hs
