name:                google-reader
version:             0.1.0.0
synopsis:            Google Reader API bindings
description:         Please see README.md
license:             PublicDomain
license-file:        UNLICENSE
author:              Amir Mohammad Saeid
maintainer:          amir@glgdgt.com
copyright:           2016 Amir Mohammad Saeid
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md

library
  exposed-modules:      Web.Google.Reader
  hs-source-dirs:       src
  build-depends:        lens
                      , wreq == 0.4.*
                      , base >= 4.7 && < 5
                      , either == 4.4.*
                      , http-types == 0.8.*
                      , containers == 0.5.*
                      , bytestring == 0.10.*
                      , attoparsec == 0.12.*
                      , text >= 0.11 && < 1.3
                      , aeson >= 0.7 && < 0.11
                      , network >= 2.6 && <2.7
                      , network-uri >= 2.6 && <2.7
                      , http-client >= 0.3.7 && < 0.5
  default-language:     Haskell2010

source-repository head
  type: git
  location: https://github.com/amir/google-reader
